# airflow_mcp_server

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  working_mcp_server.py
src/airflow_mcp_server/: __init__.py  client.py  config.py  fastmcp_server.py  main.py  server.py
